--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -1,11 +1,10 @@
 .add_content{
-  border: 1px solid #0160AE;
   border-radius: 10px;
-  padding: 20px;
-  margin-top: 10px;
+  border: 1px solid #0160AE;
+  margin-bottom: 20px;
 }
 .add_click{
-  margin-top: 10px;
+  margin: 10px;
 }
 .add_link{
   padding-top: 5px;
@@ -17,6 +16,13 @@
 }
 .label{
   font-weight: 500;
+  color: #0160AE;
+  background-color: #C7D0E9;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 .label_item{
   padding: 12px 0px 3px;
@@ -150,4 +156,18 @@ input[type=number] {
   margin-top: 5px;
   margin-bottom: 0;
 }
-
+.input-line {
+  display: flex;
+  position: relative;
+}
+.input-img {
+  top: 10px;
+  left: 20px;
+}
+.input-text{
+  border: 0;
+  width: 90%;
+  padding-left: 10px;
+  outline: 0;
+  font-size: 14px;
+}
