--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -135,6 +135,7 @@ button {
 
 ::ng-deep .date-picker {
   width: 100%;
+  outline:0px;
   .datepicker-container{
     width: 100%;
     input {
@@ -142,7 +143,7 @@ button {
       width: 100% !important;
       height: 38px !important;
       padding: .375rem .75rem !important;
-      font-size: 1rem !important;
+      font-size: inherit !important;
       line-height: 1.5 !important;
       color: #495057 !important;
       background-color: #fff !important;
@@ -150,6 +151,7 @@ button {
       border: 1px solid #87CAFF !important;
       border-radius: .25rem !important;
       transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+      outline:0px !important;
     }
   }
 }
@@ -159,4 +161,21 @@ button {
   padding: 7px;
   margin-top: 5px;
   margin-bottom: 0;
+}
+
+
+.input-line {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.input-img {
+  top: 10px;
+  right: 25px;
+  position: absolute;
+}
+.input-text {
+  border: 0;
+  width: 100%;
+  outline:0px;
 }
