--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -212,3 +212,27 @@ h3{
   background-repeat: no-repeat;
   background-image: url(../../assets/img/db_log_out.svg);
 }
+
+.form-input-line {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.form-input-img {
+  padding: 10px;
+  background: #eff2f5;
+  border-radius: 5px 0 0 5px;
+}
+.form-input-text {
+  border: 0;
+  background: #EFF2F5;
+  padding: 10px;
+  width: 100%;
+  outline:0px;
+  border-radius: 0 5px 5px 0;
+}
+.form-icon-password{
+  top: 10px;
+  right: 20px;
+  position: absolute;
+}
