--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -52,7 +52,9 @@
             <i class="fa fa_icon" [ngClass]="{
               'fa-unlock-alt': item.status == 'Đang phát hành',
               'fa-unlock': item.status == 'Ngừng phát hành'
-            }" [ngbTooltip]="item.status == 'Đang phát hành' ? 'Ngừng phát hành' : 'Phát hành'"></i>
+            }" [ngbTooltip]="item.status == 'Đang phát hành' ? 'Ngừng phát hành' : 'Mở phát hành'"
+            (click)="sendStatus(item.status); open(modalNotifi)"
+            ></i>
           </div>
           <div class="col-md-100-5">
             <i class="fa fa-file-o fa_icon" ngbTooltip="Tạo hợp đồng đơn lẻ"></i>
@@ -64,7 +66,8 @@
             <i class="fa fa-share-square-o fa_icon" ngbTooltip="Chia sẻ"></i>
           </div>
           <div class="col-md-100-5">
-            <i class="fa fa-trash-o fa_icon icon_red" ngbTooltip="Xóa"></i>
+            <i class="fa fa-trash-o fa_icon icon_red" ngbTooltip="Xóa"
+            (click)="deleteItem(item.id); open(modalNotifi)"></i>
           </div>
         </div>
       </div>
@@ -80,3 +83,33 @@
   </div>
 
 </div>
+
+
+<!-- Popup notification signup -->
+<ng-template #modalNotifi let-modal >
+  <div class="popup_content">
+    <div class="row">
+      <div class="col-md-10">
+        <h4 class="popup_title">THÔNG BÁO</h4>
+      </div>
+      <div class="col-md-2 popup_close">
+        <span (click)="modal.dismiss('Cross click')">×</span>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-12">
+          <div class="form-group">
+            <div class="input-group">
+              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-primary' : status==1}" style="text-align: center;    width: 100%;">
+              {{notification}}
+            </p>
+            </div>
+          </div>
+          <div class="form-group" style="text-align: center; padding-top: 30px;width: 100px;margin: 10px auto;">
+            <button (click)="modal.dismiss('Cross click');" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
+          </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
