--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -14,7 +14,7 @@
       <input type="text" id="contractTemplateType" class="form-control input-search"/>
     </div>
     <div class="col-md-2 btn_add">
-      <button type="button" class="btn btn-outline-dark btn_submit">Thêm mới</button>
+      <button type="button" class="btn btn-outline-dark btn_submit" (click)="addContractTemplate()">Thêm mới</button>
     </div>
   </div>
 
