--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -649,8 +649,8 @@
     </div>
   </form>
 
-  <br/>
-  {{this.datas | json}}
+  <!-- <br/>
+  {{this.datas | json}} -->
 
   <br/>
   {{this.userForm.value | json}}
