--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -110,5 +110,15 @@
     </div>
   </div>
 </form>
-<div class="content_footer">@Copyright 2021 - MobiFone</div>
+<div class="footer-infor-contract">
+  <div style="width: 200px;">
+    <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+  </div>
+  <div class="content_footer"></div>
+  <div>
+    <button type="button" name="next" class="next draft-button">Lưu nháp</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+  </div>
+</div>
+
 
