--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -211,3 +211,13 @@
   border-radius: .25rem !important;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
 }
+
+.btn-block {
+  background-color: #106DB6;
+  color: white;
+  height: 40px;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 5px;
+}
+
