--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -59,7 +59,7 @@
             <i class="fa fa-pencil-square fa_icon" ngbTooltip="Sửa hợp đồng" (click)="openEdit(item.id)"></i>
           </div>
           <div class="{{iconClass}}" *ngIf="status == 'draft'">
-            <i class="fa fa-minus-square fa_icon" ngbTooltip="Xóa hợp đồng"></i>
+            <i class="fa fa-minus-square fa_icon" ngbTooltip="Xóa hợp đồng" (click)="deleteItem(item.id); open(modalNotifi)"></i>
           </div>
           <div class="{{iconClass}}" *ngIf="status == 'processing' || status == 'expire' || status == 'complete'">
             <i class="fa fa-calendar-o fa_icon" ngbTooltip="Xem hợp đồng liên quan"></i>
@@ -189,6 +189,35 @@
     <div style="float: right; padding-top: 20px;">
       <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')"
       style="padding: 5px; width: 100px; background: #106DB6; color: white; border: 1px solid #87CAFF;">Ok</button>
+    </div>
+  </div>
+</ng-template>
+
+<!-- Popup notification signup -->
+<ng-template #modalNotifi let-modal >
+  <div class="popup_content">
+    <div class="row">
+      <div class="col-md-10">
+        <h4 class="popup_title">THÔNG BÁO</h4>
+      </div>
+      <div class="col-md-2 popup_close">
+        <span (click)="modal.dismiss('Cross click')">×</span>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-12">
+          <div class="form-group">
+            <div class="input-group">
+              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : statusPopup==0, 'alert-primary' : statusPopup==1}" style="text-align: center;    width: 100%;">
+              {{notificationPopup}}
+            </p>
+            </div>
+          </div>
+          <div class="form-group" style="text-align: center; padding-top: 30px;width: 100px;margin: 10px auto;">
+            <button (click)="modal.dismiss('Cross click');" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
+          </div>
+      </div>
     </div>
   </div>
 </ng-template>
