--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -60,7 +60,7 @@ header {
   width: calc(100% - 220px);
   background: #fff;
   height: 60px;
-  padding: 0rem 1rem;
+  padding: 0 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -77,13 +77,14 @@ header {
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding: 20px;
+
+}
+.social-icons:hover {
+  background: #f3f8ff;
 }
 
 
-.social-icons span,
-.social-icons span {
-  margin-left: 1.2rem;
-}
 .social-icons .notification_login{
   height: 20px;
   width: 20px;
