--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -1,5 +1,6 @@
 .sample-contract {
-  height: calc(100vh - 221px);
+  //height: calc(100vh - 221px);
+  height: calc(100vh - 201px);
 
   &__file {
 
@@ -29,7 +30,8 @@
   }
 
   .viewer-pdf.isDrag{
-    height: calc(100vh - 221px);
+    //height: calc(100vh - 221px);
+    height: calc(100vh - 201px);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
