--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -101,7 +101,7 @@
   <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
-    <button type="button" name="saveDocument" class="next action-button pull-right">Lưu nháp</button>
+    <button type="button" name="saveDocument" class="next action-button" style="background-color: #FCAF17">Lưu nháp</button>
     <button (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
   </div>
 </div>
