--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -15,7 +15,7 @@
   font-weight: 500;
   font-size: 16px;
   color: #106DB6;
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 .item_contract_infor{
