--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -16,7 +16,7 @@
   font-weight: 500;
   font-size: 16px;
   color: #106DB6;
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 .item_contract_infor{
