--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -11,15 +11,15 @@
 }
 
 .user_contact {
-  border: 1px solid #0160AE;
-  padding: 10px;
   border-radius: 10px;
+  border: 1px solid #0160AE;
+  margin-bottom: 10px;
 }
 
 .partner_contact {
-  border: 1px solid #0160AE;
-  padding: 10px;
   border-radius: 10px;
+  border: 1px solid #0160AE;
+  margin-bottom: 10px;
   margin-top: 10px;
 }
 
@@ -88,4 +88,25 @@
   cursor: pointer;
   padding: 10px 5px;
   margin: 10px 5px;
+}
+
+.input_text{
+  background: #EFF2F5;
+  padding: 10px;
+  border-radius: 5px;
+  min-height: 40px;
+}
+
+.label{
+  font-weight: 500;
+  color: #0160AE;
+  background-color: #C7D0E9;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+.content_determine{
+  padding: 10px;
 }
