--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,23 +1,23 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
   <!-- step by step -->
-  <div class="activity-card col" style="padding: 10px;text-align: center;">
+  <div class="activity-card col" style="text-align: center;">
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div> -->
+        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
       </li>
 
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
                      step == 'confirm-contract') ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div> -->
+        <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div>
       </li>
 
       <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div> -->
+        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div>
       </li>
 
       <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
-        <!-- <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div> -->
+        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div>
       </li>
     </ul>
   </div>
